update index. added timer.htm.

--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@ $(document).ready(function () {
 
 <p>R Users,</p>
 <p>Welcome to R Bootcamp 2020.</p>
-<p>This webpage will be your guide to this course. Please Start by reading the <a href="about.html">Syllabus</a></p>
+<p>This webpage will be your guide to this course. Please Start by reading the <a href="syllabus.html">Syllabus</a></p>
 <div id="slides" class="section level2">
 <h2>Slides</h2>
 </div>
