--- a/Principles.html
+++ b/Principles.html
@@ -212,7 +212,7 @@ slide:not(.current) .plotly.html-widget{
 
 <ul>
 <li>is the main repository for contributed R Packages.</li>
-<li>There are currently 16011 packages available on CRAN.</li>
+<li>There are currently 16021 packages available on CRAN.</li>
 <li>Low bar to get in.</li>
 <li>Anyone can contribute.</li>
 </ul></li>
@@ -353,7 +353,7 @@ iris &lt;- filter(iris, Species == &quot;setosa&quot;) #&lt; Actually filters</p
 
 <p><a href='https://www.azquotes.com/quote/932334' title=''><img class="fullpage" src='https://www.azquotes.com/picture-quotes/quote-i-used-to-be-enamored-of-object-oriented-programming-i-m-now-finding-myself-leaning-eric-allman-93-23-34.jpg' title=''/></a></p>
 
-</article></slide><slide class=""><hgroup><h2></h2></hgroup><article  id="section" class="flexbox vcenter">
+</article></slide><slide class=""><hgroup><h2></h2></hgroup><article  class="flexbox vcenter" id="section">
 
 <p>So what?</p>
 
