--- a/syllabus.html
+++ b/syllabus.html
@@ -339,10 +339,10 @@ $(document).ready(function () {
 <h1>Topics</h1>
 <p>Below is the list of topics that are likely to be covered and the likely order in which they will be covered, although there will be some skipping around as some topics are best learned with the context of others. All are time permitting and we may not get to some of the later ones.</p>
 <ol style="list-style-type: decimal">
-<li>Introductions</li>
+<li><a href="Introductions.html">Introductions</a></li>
 <li>R &amp; RStudio Walkthrough</li>
-<li>Understanding R Principles</li>
-<li>R Syntax
+<li><a href="Principles.html">Understanding R Principles</a></li>
+<li><a href="Syntax.html">R Syntax</a>
 <ol style="list-style-type: lower-alpha">
 <li>Variables</li>
 <li>Operators</li>
@@ -350,7 +350,7 @@ $(document).ready(function () {
 <li>Functions</li>
 <li>Formulas, Specials, and R Uniqueness</li>
 </ol></li>
-<li>Data Structure in R.
+<li><a href="Syntax.html">Data Structure in R</a>
 <ol style="list-style-type: lower-alpha">
 <li>Vectors &amp; matrices</li>
 <li>Lists</li>
