--- a/Principles.html
+++ b/Principles.html
@@ -207,29 +207,14 @@ slide:not(.current) .plotly.html-widget{
 
 </article></slide><slide class=""><hgroup><h2>R is collaborative</h2></hgroup><article  id="r-is-collaborative">
 
-<ul class = 'build'>
-<li><a href='https://cran.r-project.org/' title=''>CRAN</a> stands for: Comprehensive R Archive Network
+<h3>Packages</h3>
+
+<p>Packages are collections of functions put together by other programmers for your use. (You can also publish packages.)</p>
 
 <ul>
-<li>is the main repository for contributed R Packages.</li>
-<li>There are currently 16021 packages available on CRAN.</li>
-<li>Low bar to get in.</li>
-<li>Anyone can contribute.</li>
-</ul></li>
-<li><a href='http://www.bioconductor.org/' title=''>BioConductor</a>
-
-<ul>
-<li>Additional Repository specializing in high throughput genomic data packages.</li>
-<li>Much more rigorous to gain entry to.</li>
-</ul></li>
-<li><a href='https://github.com/search/advanced' title=''>GitHub</a>
-
-<ul>
-<li>Where most new R work in completed.</li>
-</ul></li>
+<li><a href='https://cran.r-project.org/' title=''>CRAN</a> stands for: Comprehensive * <a href='http://www.bioconductor.org/' title=''>BioConductor</a></li>
+<li><a href='https://github.com/search/advanced' title=''>GitHub</a></li>
 </ul>
-
-<aside class='note'><section><p>Packages are essentially a collection of functions together in a namespace. We will talk about namespaces a little more later but the important this to know here is how to find functions and packages.</p></section></aside>
 
 </article></slide><slide class=""><hgroup><h2>R is a Multi-Paradigm Programming Language</h2></hgroup><article  id="r-is-a-multi-paradigm-programming-language">
 
