--- a/index.html
+++ b/index.html
@@ -299,6 +299,34 @@ $(document).ready(function () {
 <p>This webpage will be your guide to this course. Please Start by reading the <a href="syllabus.html">Syllabus</a></p>
 <div id="slides" class="section level2">
 <h2>Slides</h2>
+<ul>
+<li><a href="Introductions.html">Introductions</a></li>
+<li><a href="Principles.html">Principles</a></li>
+<li><a href="Resources.html">Resources</a></li>
+<li><a href="Syntax.html">Syntax &amp; Data Structures</a></li>
+<li><a href="Packages.html">Packages</a></li>
+<li><a href="Tidyverse.html">Tidyverse</a></li>
+<li><a href="GettingData.html">Getting Data</a></li>
+</ul>
+</div>
+<div id="data" class="section level2">
+<h2>Data</h2>
+<ul>
+<li>Ebola Data
+<ul>
+<li><a href="https://data.humdata.org/dataset/ebola-cases-2014">Source</a> - The Humanitarian Data Exchange<br />
+</li>
+<li><a href="https://github.com/halpo/R_Bootcamp_2020/raw/master/data/ebola-cases-and-deaths-who-gar-sitrep.xlsx">Data</a></li>
+</ul></li>
+<li>Bourdeaux Wine Data
+<ul>
+<li><a href="https://link.springer.com/book/10.1007/978-0-387-09608-7">Source</a> - Sheather, Simon. <em>A modern approach to regression with R.</em> Springer Science &amp; Business Media, 2009.</li>
+<li><a href="https://github.com/halpo/R_Bootcamp_2020/raw/master/data/Bordeaux.csv">Data</a></li>
+</ul></li>
+</ul>
+</div>
+<div id="videos" class="section level2">
+<h2>Videos</h2>
 </div>
 
 
