--- a/syllabus.html
+++ b/syllabus.html
@@ -350,24 +350,30 @@ $(document).ready(function () {
 <li>Functions</li>
 <li>Formulas, Specials, and R Uniqueness</li>
 </ol></li>
-<li><a href="Syntax.html">Data Structure in R</a>
+<li><a href="Syntax.html#2">Data Structure in R</a>
 <ol style="list-style-type: lower-alpha">
 <li>Vectors &amp; matrices</li>
 <li>Lists</li>
 <li>Data Frames</li>
 <li>S3, S4, R5, R6, &amp; Others</li>
-<li>Tibbles, Data Abstraction, &amp; the Tidyverse</li>
+<li><a href="Tidyverse.html">Tibbles, Data Abstraction, &amp; the Tidyverse</a></li>
 </ol></li>
-<li>Packages, CRAN, BioConductor, and GitHub</li>
-<li>Where to get help, your resources
+<li><a href="Packages.html#2">Packages and GitHub</a>
+<ul>
+<li><a href="https://cran.r-project.org">CRAN</a></li>
+<li><a href="https://www.bioconductor.org/">BioConductor</a><br />
+</li>
+<li><a href="https://github.com/search?q=language%3AR&amp;type=Repositories&amp;ref=advsearch&amp;l=R&amp;l=">GitHub</a></li>
+</ul></li>
+<li><a href="Resources.html#2">Where to get help, your resources</a>
 <ul>
 <li>Help files</li>
-<li>Rdocumentation.org - Online Help files</li>
-<li>StackOverflow</li>
-<li>Mailing lists</li>
+<li><a href="https://Rdocumentation.org">Rdocumentation.org</a> - Online Help files</li>
+<li><a href="https://stackoverflow.com/questions/tagged/rlang">StackOverflow</a></li>
+<li><a href="https://www.r-project.org/mail.html">Mailing lists</a></li>
 <li>Other sites</li>
 </ul></li>
-<li>Getting Data
+<li><a href="GettingData.html">Getting Data</a>
 <ul>
 <li>Data Sources</li>
 <li>Reading Data</li>
