--- a/Packages.html
+++ b/Packages.html
@@ -367,7 +367,9 @@ Author(s):
 
 </article></slide><slide class="segue dark nobackground level1"><hgroup class = 'auto-fadein'><h2>Finding Packages</h2></hgroup><article  id="finding-packages">
 
-<p><img src='images/PackageSources.png' title=''/> ## Repositories</p>
+<img src='images/PackageSources.png' title=''/>
+
+</article></slide><slide class=""><hgroup><h2>Repositories</h2></hgroup><article  id="repositories">
 
 <p>Repositories are locations where you (and R) can find packages to install and use.</p>
 
@@ -388,7 +390,7 @@ Author(s):
 
 <ul>
 <li>The main (and official) repository for contributed R Packages.</li>
-<li>There are currently 16033 packages available on CRAN.</li>
+<li>There are currently 16041 packages available on CRAN.</li>
 <li>Low bar to get in.</li>
 <li>Anyone can contribute.</li>
 </ul>
