--- a/index.html
+++ b/index.html
@@ -317,6 +317,7 @@ $(document).ready(function () {
 <li><a href="https://data.humdata.org/dataset/ebola-cases-2014">Source</a> - The Humanitarian Data Exchange<br />
 </li>
 <li><a href="https://github.com/halpo/R_Bootcamp_2020/raw/master/data/ebola-cases-and-deaths-who-gar-sitrep.xlsx">Data</a></li>
+<li><a href="https://github.com/halpo/R_Bootcamp_2020/tree/master/reading_ebola_data.R">Script - version 1</a></li>
 </ul></li>
 <li>Bourdeaux Wine Data
 <ul>
