--- a/GettingData.html
+++ b/GettingData.html
@@ -214,7 +214,7 @@ slide:not(.current) .plotly.html-widget{
 
 <p>Find a function that reads in Microsoft Excel &lsquo;xlsx&rsquo; files. Refer back to the <a href='Resources.html' title=''>Resources slides</a> if you need.</p>
 
-<div id="timer1" onclick="startTimer()" class="timer">
+<div class="timer" id="timer1" onclick="startTimer()">
 <p>2:00</p></div>
 
 </article></slide><slide class=""><hgroup><h2>Possible Answers</h2></hgroup><article  id="possible-answers">
@@ -295,6 +295,31 @@ head(ebola.data.raw)</pre>
 <td align="left">NA</td>
 </tr>
 </table>
+
+</article></slide><slide class=""><hgroup><h2>Examining data</h2></hgroup><article  id="examining-data">
+
+<p>Useful tools for examining data.</p>
+
+<ul>
+<li><code>str()</code> - &lsquo;structure&rsquo; of the data.</li>
+<li><code>glimpse()</code> - more useful version of str and works on all tibbles.</li>
+<li><code>head()</code> - first n rows.</li>
+<li><code>tail()</code> - last n rows</li>
+<li><code>summary()</code> - will give univariate summaries of variables.</li>
+</ul>
+
+</article></slide><slide class=""><hgroup><h2><code>glimpse()</code></h2></hgroup><article  id="glimpse">
+
+<pre class = 'prettyprint lang-r'>glimpse(ebola.data.raw)</pre>
+
+<pre >## Observations: 44
+## Variables: 6
+## $ Country               [3m[38;5;246m&lt;chr&gt;[39m[23m &quot;Guinea&quot;, &quot;Guinea&quot;, &quot;Guin...
+## $ `Case def.`           [3m[38;5;246m&lt;chr&gt;[39m[23m &quot;Confirmed&quot;, &quot;Probable&quot;, ...
+## $ `Total cases`         [3m[38;5;246m&lt;dbl&gt;[39m[23m 3351, 453, 0, 3804, 3151,...
+## $ `Cases last 21 days`  [3m[38;5;246m&lt;dbl&gt;[39m[23m 0, NA, NA, 0, NA, NA, NA,...
+## $ `Total deaths`        [3m[38;5;246m&lt;dbl&gt;[39m[23m 2083, 453, NA, 2536, NA, ...
+## $ `Country Report Date` [3m[38;5;246m&lt;dttm&gt;[39m[23m 2015-12-27, NA, NA, NA, ...</pre>
 
 </article></slide><slide class=""><hgroup><h2>Problem</h2></hgroup><article  id="problem" class="flexbox vcenter build">
 
