--- a/Principles.html
+++ b/Principles.html
@@ -338,7 +338,7 @@ iris &lt;- filter(iris, Species == &quot;setosa&quot;) #&lt; Actually filters</p
 
 <p><a href='https://www.azquotes.com/quote/932334' title=''><img class="fullpage" src='https://www.azquotes.com/picture-quotes/quote-i-used-to-be-enamored-of-object-oriented-programming-i-m-now-finding-myself-leaning-eric-allman-93-23-34.jpg' title=''/></a></p>
 
-</article></slide><slide class=""><hgroup><h2></h2></hgroup><article  class="flexbox vcenter" id="section">
+</article></slide><slide class=""><hgroup><h2></h2></hgroup><article  id="section" class="flexbox vcenter">
 
 <p>So what?</p>
 
