--- a/GettingData.html
+++ b/GettingData.html
@@ -214,7 +214,7 @@ slide:not(.current) .plotly.html-widget{
 
 <p>Find a function that reads in Microsoft Excel &lsquo;xlsx&rsquo; files. Refer back to the <a href='Resources.html' title=''>Resources slides</a> if you need.</p>
 
-<div class="timer" id="timer1" onclick="startTimer()">
+<div id="timer1" onclick="startTimer()" class="timer">
 <p>2:00</p></div>
 
 </article></slide><slide class=""><hgroup><h2>Possible Answers</h2></hgroup><article  id="possible-answers">
@@ -314,12 +314,12 @@ head(ebola.data.raw)</pre>
 
 <pre >## Observations: 44
 ## Variables: 6
-## $ Country               [3m[38;5;246m&lt;chr&gt;[39m[23m &quot;Guinea&quot;, &quot;Guinea&quot;, &quot;Guin...
-## $ `Case def.`           [3m[38;5;246m&lt;chr&gt;[39m[23m &quot;Confirmed&quot;, &quot;Probable&quot;, ...
-## $ `Total cases`         [3m[38;5;246m&lt;dbl&gt;[39m[23m 3351, 453, 0, 3804, 3151,...
-## $ `Cases last 21 days`  [3m[38;5;246m&lt;dbl&gt;[39m[23m 0, NA, NA, 0, NA, NA, NA,...
-## $ `Total deaths`        [3m[38;5;246m&lt;dbl&gt;[39m[23m 2083, 453, NA, 2536, NA, ...
-## $ `Country Report Date` [3m[38;5;246m&lt;dttm&gt;[39m[23m 2015-12-27, NA, NA, NA, ...</pre>
+## $ Country               &lt;chr&gt; &quot;Guinea&quot;, &quot;Guinea&quot;, &quot;Guin...
+## $ `Case def.`           &lt;chr&gt; &quot;Confirmed&quot;, &quot;Probable&quot;, ...
+## $ `Total cases`         &lt;dbl&gt; 3351, 453, 0, 3804, 3151,...
+## $ `Cases last 21 days`  &lt;dbl&gt; 0, NA, NA, 0, NA, NA, NA,...
+## $ `Total deaths`        &lt;dbl&gt; 2083, 453, NA, 2536, NA, ...
+## $ `Country Report Date` &lt;dttm&gt; 2015-12-27, NA, NA, NA, ...</pre>
 
 </article></slide><slide class=""><hgroup><h2>Problem</h2></hgroup><article  id="problem" class="flexbox vcenter build">
 
