--- a/Resources.html
+++ b/Resources.html
@@ -229,7 +229,7 @@ slide:not(.current) .plotly.html-widget{
 
 <p>Documentation for only those packages that are loaded and/or installed.</p>
 
-</article></slide><slide class=""><hgroup><h2>Online documentation</h2></hgroup><article  id="online-documentation" class="flexbox vcenter">
+</article></slide><slide class=""><hgroup><h2>Online documentation</h2></hgroup><article  class="flexbox vcenter" id="online-documentation">
 
 <p><a href='https://www.rdocumentation.org/' title=''><img src='images/RDocumentation.org.png' title=''/></a></p>
 
