--- a/Syntax.html
+++ b/Syntax.html
@@ -191,7 +191,7 @@ slide:not(.current) .plotly.html-widget{
 
 <p>This will be short, I promise.</p>
 
-</article></slide><slide class=""><hgroup><h2>The absolute most important part of syntax …</h2></hgroup><article  id="the-absolute-most-important-part-of-syntax" class="build">
+</article></slide><slide class=""><hgroup><h2>The absolute most important part of syntax …</h2></hgroup><article  class="build" id="the-absolute-most-important-part-of-syntax">
 
 <div class="flexbox vcenter">
 <p><strong>Comments</strong></p></div>
@@ -223,7 +223,7 @@ slide:not(.current) .plotly.html-widget{
 </ul></li>
 </ul>
 
-</article></slide><slide class=""><hgroup><h2>Variables</h2></hgroup><article  id="variables" class="build">
+</article></slide><slide class=""><hgroup><h2>Variables</h2></hgroup><article  class="build" id="variables">
 
 <ul>
 <li>Variables &ldquo;can&rdquo; include:
@@ -243,7 +243,7 @@ slide:not(.current) .plotly.html-widget{
 
 <pre >## [1] &quot;A string that is not&quot;</pre>
 
-</article></slide><slide class=""><hgroup><h2>Functions</h2></hgroup><article  id="functions" class="build">
+</article></slide><slide class=""><hgroup><h2>Functions</h2></hgroup><article  class="build" id="functions">
 
 <ul>
 <li>create a function with</li>
@@ -261,7 +261,7 @@ slide:not(.current) .plotly.html-widget{
 
 <pre >## [1] &quot;hello world&quot;</pre>
 
-</article></slide><slide class=""><hgroup><h2>Data Types: Vectors</h2></hgroup><article  id="data-types-vectors" class="build">
+</article></slide><slide class=""><hgroup><h2>Data Types: Vectors</h2></hgroup><article  class="build" id="data-types-vectors">
 
 <ul>
 <li>In R everything is a vector</li>
@@ -287,7 +287,7 @@ slide:not(.current) .plotly.html-widget{
 <li><em>language</em></li>
 </ul></div>
 
-</article></slide><slide class=""><hgroup><h2>Vector Operations</h2></hgroup><article  id="vector-operations" class="build">
+</article></slide><slide class=""><hgroup><h2>Vector Operations</h2></hgroup><article  class="build" id="vector-operations">
 
 <pre class = 'prettyprint lang-r'># Most operations are obvious
 length(b)</pre>
@@ -302,7 +302,7 @@ length(b)</pre>
 
 <pre >## [1] &quot;numeric&quot;</pre>
 
-</article></slide><slide class=""><hgroup><h2>Indexing (2-types)</h2></hgroup><article  id="indexing-2-types" class="build">
+</article></slide><slide class=""><hgroup><h2>Indexing (2-types)</h2></hgroup><article  class="build" id="indexing-2-types">
 
 <div class="columns-2">
 <div class="column">
